# HeinrichHartmann.github.io

./: .agignore  .gitignore  CNAME  Dockerfile  Gemfile  Makefile  README.md  _config.yml  about.html  about.md  config.toml  consulting.html  consulting.md  feed.xml  hochzeit.md  impressum.md  index.html  index.md  index.xml  jekyll-run.sh  jekyll-update.sh  keybase.txt  last-update.txt  math.html  opinion.html  publish.sh  shell.nix  sitemap.xml
_drafts/: 2000-01-01-Example-Title.md  2012-10-03-Simple-ODE-solver.md  2014-10-22-Privacy-Protection-for-Mobile-Sensor-Data.md  2016-03-12-Dijkstra's-Prime-Number-Algorithm.md  2018-01-10-Impulse-and-Intent.md  2018-02-05-Why-Data-Science.md
_includes/: mathjax-preamble.tex
_layouts/: default.html  external.html  impressum.md  page.html  plain.html  post.html  text.html
_notebooks/: 2018-09-02-Latency-SLOs-done-right.ipynb  jekyll.tpl  jekyll_preprocessor.py  nbc.py
_plugins/: jekyll-figure.rb  jekyll-hookin.rb  jekyll-pull.rb  jekyll_figure.rb
_posts/: 2000-01-01-Example.md  2012-09-10-Dissecting-Hello-World.md  2012-10-03-Simple-ODE-solver.md  2013-01-17-Why-Openness-benefitts-research.md  2013-12-25-Setting-up-a-Virtual-Cluster.md  2014-01-01-Monitoring-with-Ganglia.md  2014-01-15-Distributed-scraper-design.md  2014-04-14-Digging-into-R.md  2014-07-10-Anomaly-Detection.md  2018-03-11-All-is-loss.md  (+47 more)
elements/: 404.html  Makefile  index.html  mkdocs.yml  pyproject.toml
elements/docs/: index.md  linked-structures.md  smooth-functions.md
elements/linked-structures/: index.html
elements/search/: search_index.json
(+393 files in other folders)
