[tool.poetry]
name = "latency"
version = "0.1.0"
description = ""
authors = ["Heinrich Hartmann <derhein@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
mkdocs = "^1.2.2"
mkdocs-material = "^7.2.4"
mdx-truly-sane-lists = "^1.2"
mkdocs-bibtex = "^1.0.0"
markdown-include = "^0.6.0"
mkdocs-include-markdown-plugin = "^3.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
